mosquitto/manifests/mosquitto-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mosquitto

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: mosquitto
  labels:
    app: mosquitto
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mosquitto
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "32Mi"
          limits:
            cpu: "200m"
            memory: "64Mi"
        volumeMounts:
        - name: mosquitto-data
          mountPath: /mosquitto/data          
        - name: mosquitto-config
          mountPath: /mosquitto/config
        ports:
        - name: mqtt-tcp
          containerPort: 1883
      volumes:
      # - name: mosquitto-config
      #   configMap:
      #     name: mosquitto-config
      - name: mosquitto-data
        hostPath:
          path: "/mnt/k3s-prod-data/mosquitto/data"
      - name: mosquitto-config
        hostPath:
          path: "/mnt/k3s-prod-data/mosquitto/config"
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-mqtt
  namespace: mosquitto
spec:
  selector:
    app: mosquitto
  type: ClusterIP
  ports:
  - name: mqtt-tcp
    port: 1883
    targetPort: 1883
    protocol: TCP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto-mqtt
  namespace: mosquitto
spec:
  entryPoints:
    - mqtt-tcp
  routes:
  - match: HostSNI(`*`)
    services:
    - name: mosquitto-mqtt
      port: 1883
